k8s/grafana/3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: canister
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: com.tale.canister.grafana
